# jarvis-os

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.chromadb.yml  docker-compose.ollama.yml  docker-compose.yml  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup-native.sh  setup.sh
.devcontainer/: devcontainer.json
agent/prompts/: personality.yml  rules.yml  system.md
config/: crons.yml  integrations.yml  jarvis.yml
dashboard/: index.html
docker/: Dockerfile  Dockerfile.base  Dockerfile.ollama  entrypoint.sh
docs/: VPS_DEPLOY.md
jarvis/: __init__.py  __main__.py  agent.py  agent_manager.py  browser_tool.py  cli.py  config.py  healthcheck.py  init_command.py  knowledge_manager.py  llm.py  memory_store.py  onboarding.py  plugins.py  scheduler.py  server.py  skill_loader.py  tools.py  websocket_handler.py  workspace.py
plugins/: README.md  example_weather.py
scripts/: healthcheck.py  setup.sh
skills-community/agent-browser/: SKILL.md  SKILL.yml
skills-community/brave-search/: SKILL.md  SKILL.yml
skills-community/byterover/: SKILL.md  SKILL.yml
skills-community/caldav-calendar/: SKILL.md  SKILL.yml
skills-community/github/: SKILL.md  SKILL.yml
skills-community/gog/: SKILL.md  SKILL.yml
skills-community/himalaya/: SKILL.md  SKILL.yml
skills-community/humanize-ai-text/: SKILL.md  (+1 more)
tests/: conftest.py  test_agent.py  test_agent_manager.py  test_config.py  test_init.py  test_knowledge.py  test_memory.py  test_onboarding.py  test_plugins.py  test_server.py  test_tools.py  test_trading.py  test_websocket.py
(+44 files in other folders)
