[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-os"
version = "1.1.0"
description = "Jarvis OS — Your Personal AI Operating System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
dependencies = [
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "openai>=1.30",
    "anthropic>=0.30",
    "duckduckgo-search>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
jarvis = "jarvis.cli:main_sync"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["jarvis*", "skills*"]
